Update backup and social release branch prefix

--- a/projects/plugins/backup/composer.json
+++ b/projects/plugins/backup/composer.json
@@ -46,7 +46,7 @@
 		"autotagger": {
 			"v": false
 		},
-		"release-branch-prefix": "backup",
+		"release-branch-prefix": "jetpack",
 		"wp-plugin-slug": "jetpack-backup",
 		"wp-svn-autopublish": true
 	},
