--- a/projects/plugins/crm/composer.json
+++ b/projects/plugins/crm/composer.json
@@ -16,7 +16,7 @@
 			"pnpm run build"
 		],
 		"build-production": [
-			"pnpm run build"
+			"pnpm run build-production"
 		],
 		"tests": "vendor/bin/codecept run acceptance --fail-fast",
 		"tests-debug": "vendor/bin/codecept run acceptance --fail-fast --debug",
