Updated automattic/jetpack-backup-plugin version to 1.4.4-beta

--- a/projects/plugins/backup/composer.json
+++ b/projects/plugins/backup/composer.json
@@ -46,7 +46,7 @@
 		"autotagger": {
 			"v": false
 		},
-		"release-branch-prefix": "jetpack",
+		"release-branch-prefix": "backup",
 		"wp-plugin-slug": "jetpack-backup",
 		"wp-svn-autopublish": true
 	},
