add 'watch' entries for composer and package json files

--- a/projects/packages/forms/composer.json
+++ b/projects/packages/forms/composer.json
@@ -31,7 +31,11 @@
 			"pnpm run build"
 		],
 		"post-install-cmd": "WorDBless\\Composer\\InstallDropin::copy",
-		"post-update-cmd": "WorDBless\\Composer\\InstallDropin::copy"
+		"post-update-cmd": "WorDBless\\Composer\\InstallDropin::copy",
+		"watch": [
+			"Composer\\Config::disableProcessTimeout",
+			"pnpm run watch"
+		]
 	},
 	"repositories": [
 		{
