--- a/projects/packages/forms/package.json
+++ b/projects/packages/forms/package.json
@@ -18,7 +18,8 @@
 		"build": "pnpm run build:contact-form",
 		"build-production": "NODE_ENV=production BABEL_ENV=production pnpm run build:contact-form",
 		"build:contact-form": "NODE_PATH=\"$PWD/node_modules\" webpack --config ./tools/webpack.config.contact-form.js",
-		"clean": "true"
+		"clean": "true",
+		"watch": "NODE_PATH=\"$PWD/node_modules\" webpack watch --config ./tools/webpack.config.contact-form.js"
 	},
 	"dependencies": {
 		"webpack": "5.72.1",
