Blaze: add to Jetpack Social Plugin
One should be able to promote their posts when using the Jetpack Social plugin only.

--- a/projects/plugins/social/composer.json
+++ b/projects/plugins/social/composer.json
@@ -7,6 +7,7 @@
 		"automattic/jetpack-admin-ui": "@dev",
 		"automattic/jetpack-assets": "@dev",
 		"automattic/jetpack-autoloader": "@dev",
+		"automattic/jetpack-blaze": "@dev",
 		"automattic/jetpack-composer-plugin": "@dev",
 		"automattic/jetpack-config": "@dev",
 		"automattic/jetpack-identity-crisis": "@dev",
