--- a/projects/packages/forms/.gitattributes
+++ b/projects/packages/forms/.gitattributes
@@ -16,5 +16,6 @@ changelog/**      production-exclude
 phpunit.xml.dist  production-exclude
 .phpcs.dir.xml    production-exclude
 tests/**          production-exclude
+tools/**          production-exclude
 .phpcsignore      production-exclude
 .eslintrc.js      production-exclude
