Add basic babel config

--- a/projects/packages/forms/.gitattributes
+++ b/projects/packages/forms/.gitattributes
@@ -13,6 +13,7 @@ dist/**           production-include
 # Files to exclude from the mirror repo, but included in the monorepo.
 # Remember to end all directories with `/**` to properly tag every file.
 .gitignore               production-exclude
+babel.config*            production-exclude
 changelog/**             production-exclude
 phpunit.xml.dist         production-exclude
 .phpcs.dir.xml           production-exclude
