--- a/projects/packages/forms/.gitattributes
+++ b/projects/packages/forms/.gitattributes
@@ -8,12 +8,18 @@ package.json      export-ignore
 # /src/js/example.min.js  production-include
 /src/**/*.min.css production-include
 /src/**/*.rtl.css production-include
+dist/**           production-include
 
 # Files to exclude from the mirror repo, but included in the monorepo.
 # Remember to end all directories with `/**` to properly tag every file.
-.gitignore        production-exclude
-changelog/**      production-exclude
-phpunit.xml.dist  production-exclude
-.phpcs.dir.xml    production-exclude
-tests/**          production-exclude
-.phpcsignore      production-exclude
+.gitignore               production-exclude
+babel.config*            production-exclude
+changelog/**             production-exclude
+phpunit.xml.dist         production-exclude
+.phpcs.dir.xml           production-exclude
+tests/**                 production-exclude
+tools/**                 production-exclude
+.phpcsignore             production-exclude
+.eslintrc.js             production-exclude
+/src/dashboard/**/*.js   production-exclude
+/src/dashboard/**/*.scss production-exclude
