--- a/projects/plugins/crm/package.json
+++ b/projects/plugins/crm/package.json
@@ -8,7 +8,7 @@
 		"build": "pnpm run clean && pnpm run build-client",
 		"build-client": "NODE_PATH=\"$PWD/node_modules\" webpack",
 		"build-production": "NODE_ENV=production BABEL_ENV=production pnpm run build",
-		"clean": "rm -rf **/css/**/*.css.map **/css/**/*.rtl.css **/css/*.min.css **/js/**/*.min.js.map .cache/",
+		"clean": "rm -rf **/css/**/*.rtl.* .cache/ **/css/*.min.css **/js/*.min.js.* **/js/*.min.js  **/js/**/*.min.js.map **/css/**/*.css.map",
 		"watch": "pnpm run build && NODE_PATH=\"$PWD/node_modules\" webpack watch"
 	},
 	"repository": {
