--- a/projects/plugins/crm/.gitignore
+++ b/projects/plugins/crm/.gitignore
@@ -12,9 +12,12 @@ codeception.yml
 **/css/*.min.rtl.*
 **/css/**/*.min.rtl.*
 **/css/*.min.css
+**/css/welcome-to-zbs/*.min.css
+**/css/integrations/*
 **/js/*.min.js.map
 **/js/**/*.min.js.map
 **/js/*.min.js
+**/js/welcome-to-zbs/*.min.js
 **/js/*.min.js.LICENSE.txt
 .cache/
 phpcs.xml
