--- a/projects/packages/stats-admin/composer.json
+++ b/projects/packages/stats-admin/composer.json
@@ -8,7 +8,7 @@
 		"automattic/jetpack-options": "@dev",
 		"automattic/jetpack-stats": "@dev",
 		"automattic/jetpack-status": "@dev",
-		"automattic/jetpack-jitm": "2.2.x-dev"
+		"automattic/jetpack-jitm": "@dev"
 	},
 	"require-dev": {
 		"yoast/phpunit-polyfills": "1.0.4",
