--- a/projects/plugins/crm/package.json
+++ b/projects/plugins/crm/package.json
@@ -8,7 +8,7 @@
 		"build": "pnpm run clean && pnpm run build-client",
 		"build-client": "NODE_PATH=\"$PWD/node_modules\" webpack",
 		"build-production": "NODE_ENV=production BABEL_ENV=production pnpm run build",
-		"clean": "rm -rf **/css/**/*.rtl.* .cache/ **/css/*.min.css **/js/*.min.js.* **/js/*.min.js  **/js/**/*.min.js.map **/css/**/*.css.map",
+		"clean": "rm -rf css/*.min.css* css/*.min.rtl.css css/integrations/ css/welcome-to-zbs/*.min.css* css/welcome-to-zbs/*.min.rtl.css js/*.min.js* js/welcome-to-zbs/wizard2.min.js*",
 		"watch": "pnpm run build && NODE_PATH=\"$PWD/node_modules\" webpack watch"
 	},
 	"repository": {
