--- a/projects/plugins/jetpack/package.json
+++ b/projects/plugins/jetpack/package.json
@@ -87,7 +87,7 @@
 		"focus-trap": "6.3.0",
 		"gridicons": "3.4.1",
 		"jsdom": "20.0.3",
-		"mapbox-gl": "1.13.0",
+		"maplibre-gl": "1.15.3",
 		"markdown-it": "12.3.2",
 		"photon": "4.0.0",
 		"postcss-custom-properties": "12.1.7",
