--- a/projects/plugins/boost/.phpcsignore
+++ b/projects/plugins/boost/.phpcsignore
@@ -1,2 +1,5 @@
 # Ignore any code in the legacy folder.
 /legacy/
+
+# For the time being, ignore page optimize refactor
+/app/features/optimizations/minify/
